Update my aquaink theme

--- a/colors/aquaink.erb
+++ b/colors/aquaink.erb
@@ -1,5 +1,4 @@
 <%
-	# vim: makeprg=erb\ -T\ -\ dualtone.erb > dualtone.vim
 	# RNB, A VIM COLORSCHEME TEMPLATE
 	# Author:        Romain Lafourcade (https://github.com/romainl)
 	# Canonical URL: https://gist.github.com/romainl/5cd2f4ec222805f49eca
@@ -24,7 +23,7 @@
 	information = {
 		author:      "jiji",
 		email:       "p1ngu1n0fd00m@gmail.com",
-		name:        "dualtone",
+		name:        "aquaink",
 		description: "Simple typographic vim colorscheme",
 		background:  "dark",
 		webpage:     "nothing-here"
@@ -49,8 +48,8 @@
 
 	pink_dark  = ["#D85774",0,"magenta"]
 	pink_light = ["#F59BB0",0,"magenta"]
-	cyan_dark  = ["#57D8BB",0,"cyan"]
-	cyan_ligt  = ["#9BF5E0",0,"cyan"]
+	cyan_dark  = ["#57D8BB",0,"blue"]
+	cyan_light = ["#9BF5E0",0,"blue"]
 
 	UI_dark1  = [ "#000000",0,"black"]
 	UI_dark2  = [ "#111111",0,"black"]
@@ -114,64 +113,64 @@
 
 highlights  =                 [
 
-	[  "Normal",         "NONE",         UI_light1,  "NONE"    ],
-	[  "NonText",        "NONE",         UI_dark4,   "NONE"    ],
-	[  "Comment",        "NONE",         UI_dark7,  "NONE"    ],
-	[  "Constant",       "NONE",         UI_light1,  "bold"    ],
-	[  "Error",          "NONE",         UI_light1,  "NONE"    ],
-	[  "Identifier",     "NONE",         UI_light1,  "NONE"    ],
-	[  "Ignore",         "NONE",         UI_light1,  "NONE"    ],
-	[  "PreProc",        "NONE",         UI_light1,  "NONE"    ],
-	[  "Special",        "NONE",         UI_light1,  "NONE"    ],
-	[  "Statement",      "NONE",         UI_light1,  "NONE"    ],
-	[  "String",         "NONE",         UI_light1,  "NONE"    ],
-	[  "Number",         "NONE",         UI_light1,  "NONE"    ],
-	[  "Todo",           "NONE",         UI_light2,  "italic"  ],
-	[  "Type",           "NONE",         UI_light1,  "NONE"    ],
-	[  "Underlined",     "NONE",         UI_light1,  "NONE"    ],
-	[  "StatusLine",     UI_dark3,       UI_light3,  "NONE"    ],
-	[  "StatusLineNC",   UI_dark3,       UI_dark7,   "NONE"    ],
-	[  "VertSplit",      "NONE",         UI_dark4,   "NONE"    ],
-	[  "TabLine",        UI_dark2,       UI_dark7,   "NONE"    ],
-	[  "TabLineFill",    UI_dark2,       UI_dark7,   "NONE"    ],
-	[  "TabLineSel",     UI_dark4,       UI_light2,  "NONE"    ],
-	[  "Title",          "NONE",         UI_light1,     "bold"    ],
-	[  "CursorLine",     UI_dark3,       "NONE",     "NONE"    ],
-	[  "LineNr",         "NONE",         UI_dark7,   "NONE"    ],
-	[  "CursorLineNr",   UI_dark2,       UI_light7,  "NONE"    ],
-	[  "helpLeadBlank",  "NONE",         UI_light1,  "bold"    ],
-	[  "helpNormal",     "NONE",         UI_light1,  "italic"  ],
-	[  "Visual",         UI_dark4,       "NONE",     "NONE"    ],
-	[  "VisualNOS",      UI_dark3,       "NONE",     "NONE"    ],
-	[  "Pmenu",          UI_dark4,       UI_light1,  "NONE"    ],
-	[  "PmenuSel",       UI_dark7,       UI_light2,  "NONE"    ],
-	[  "PmenuSbar",      UI_dark4,       UI_light1,  "NONE"    ],
-	[  "PmenuThumb",     UI_light7,      UI_light1,  "NONE"    ],
-	[  "FoldColumn",     "NONE",         UI_light1,  "NONE"    ],
-	[  "Folded",         UI_dark7,       "NONE",     "bold"    ],
-	[  "WildMenu",       UI_darkred,     UI_light3,  "bold"    ],
-	[  "SpecialKey",     "NONE",         UI_dark7,   "NONE"    ],
-	[  "DiffAdd",        UI_darkgreen,   UI_green,     "NONE"    ],
-	[  "DiffChange",     UI_darkyellow,  UI_yellow,     "NONE"    ],
-	[  "DiffDelete",     UI_darkred,     UI_red,     "NONE"    ],
-	[  "DiffText",       UI_darkyellow,      UI_yellow,     "NONE"    ],
-	[  "IncSearch",      "NONE",         UI_light1,  "NONE"    ],
-	[  "Search",         "NONE",         UI_light1,  "NONE"    ],
-	[  "Directory",      "NONE",         UI_light1,  "NONE"    ],
-	[  "MatchParen",     "NONE",         UI_light1,  "NONE"    ],
-	[  "SpellBad",       "NONE",         UI_light1,  "NONE"    ],
-	[  "SpellCap",       "NONE",         UI_light1,  "NONE"    ],
-	[  "SpellLocal",     "NONE",         UI_light1,  "NONE"    ],
-	[  "SpellRare",      "NONE",         UI_light1,  "NONE"    ],
-	[  "ColorColumn",    "NONE",         UI_light1,  "NONE"    ],
-	[  "signColumn",     "NONE",         UI_light1,  "NONE"    ],
-	[  "ErrorMsg",       "NONE",         UI_light1,  "NONE"    ],
-	[  "ModeMsg",        "NONE",         UI_light1,  "NONE"    ],
-	[  "MoreMsg",        "NONE",         UI_light1,  "NONE"    ],
-	[  "Question",       "NONE",         UI_light1,  "NONE"    ],
-	[  "WarningMsg",     "NONE",         UI_light1,  "NONE"    ],
-	[  "Cursor",         "NONE",         UI_light1,  "NONE"    ],
-	[  "CursorColumn",   "NONE",         UI_light1,  "NONE"    ]
+	[  "Normal",                    "NONE",        UI_light1,  "NONE"      ],
+	[  "NonText",                   "NONE",        UI_dark4,   "NONE"      ],
+	[  "Comment",                   "NONE",        UI_light7,  "NONE"      ],
+	[  "Constant",                  "NONE",        pink_light, "bold"      ],
+	[  "Error",                     pink_dark,     "NONE",     "bold"      ],
+	[  "Identifier",                "NONE",        cyan_light, "bold"      ],
+	[  "Ignore",                    "NONE",        UI_light1,  "NONE"      ],
+	[  "PreProc",                   "NONE",        UI_light1,  "NONE"      ],
+	[  "Special",                   "NONE",        cyan_dark,  "NONE"      ],
+	[  "Statement",                 "NONE",        UI_light1,  "bold"      ],
+	[  "String",                    "NONE",        pink_light, "italic"    ],
+	[  "Number",                    "NONE",        UI_light1,  "NONE"      ],
+	[  "Todo",                      "NONE",        pink_dark,  "italic"    ],
+	[  "Type",                      "NONE",        cyan_dark,  "bold"      ],
+	[  "Underlined",                "NONE",        pink_dark,  "NONE"      ],
+	[  "StatusLine",                UI_dark3,      UI_light3,  "NONE"      ],
+	[  "StatusLineNC",              UI_dark3,      UI_dark7,   "NONE"      ],
+	[  "VertSplit",                 "NONE",        UI_dark4,   "NONE"      ],
+	[  "TabLine",                   UI_dark2,      UI_dark7,   "NONE"      ],
+	[  "TabLineFill",               UI_dark2,      UI_dark7,   "NONE"      ],
+	[  "TabLineSel",                UI_dark4,      UI_light2,  "NONE"      ],
+	[  "Title",                     "NONE",        UI_light1,  "bold"      ],
+	[  "CursorLine",                UI_dark4,      "NONE",     "NONE"      ],
+	[  "LineNr",                    "NONE",        UI_dark7,   "NONE"      ],
+	[  "CursorLineNr",              UI_dark4,      UI_light7,  "NONE"      ],
+	[  "helpLeadBlank",             "NONE",        UI_light1,  "bold"      ],
+	[  "helpNormal",                "NONE",        UI_light1,  "italic"    ],
+	[  "Visual",                    UI_dark4,      "NONE",     "NONE"      ],
+	[  "VisualNOS",                 UI_dark3,      "NONE",     "NONE"      ],
+	[  "Pmenu",                     UI_dark4,      UI_light1,  "NONE"      ],
+	[  "PmenuSel",                  UI_dark7,      UI_light2,  "NONE"      ],
+	[  "PmenuSbar",                 UI_dark4,      UI_light1,  "NONE"      ],
+	[  "PmenuThumb",                UI_light7,     UI_light1,  "NONE"      ],
+	[  "FoldColumn",                "NONE",        UI_light1,  "NONE"      ],
+	[  "Folded",                    UI_dark7,      "NONE",     "bold"      ],
+	[  "WildMenu",                  UI_darkred,    UI_light3,  "bold"      ],
+	[  "SpecialKey",                "NONE",        UI_dark7,   "NONE"      ],
+	[  "DiffAdd",                   UI_darkgreen,  UI_green,   "NONE"      ],
+	[  "DiffChange",                UI_darkyellow, UI_yellow,  "NONE"      ],
+	[  "DiffDelete",                UI_darkred,    UI_red,     "NONE"      ],
+	[  "DiffText",                  UI_darkyellow, UI_yellow,  "NONE"      ],
+	[  "IncSearch",                 cyan_light,    UI_dark1,   "NONE"      ],
+	[  "Search",                    cyan_light,    UI_dark1,   "NONE"      ],
+	[  "Directory",                 "NONE",        cyan_dark,  "NONE"      ],
+	[  "MatchParen",                pink_light,    "NONE",     "NONE"      ],
+	[  "SpellBad",                  "NONE",        UI_red,     "underline" ],
+	[  "SpellCap",                  "NONE",        UI_red,     "NONE"      ],
+	[  "SpellLocal",                "NONE",        UI_yellow,  "NONE"      ],
+	[  "SpellRare",                 "NONE",        UI_blue,    "NONE"      ],
+	[  "ColorColumn",               UI_dark3,      "NONE",     "NONE"      ],
+	[  "signColumn",                "NONE",        "NONE",     "NONE"      ],
+	[  "ErrorMsg",                  UI_red,        UI_light2,  "NONE"      ],
+	[  "ModeMsg",                   "NONE",        UI_light2,  "NONE"      ],
+	[  "MoreMsg",                   "NONE",        UI_light1,  "NONE"      ],
+	[  "Question",                  "NONE",        UI_light1,  "bold"      ],
+	[  "WarningMsg",                UI_red,        UI_light2,  "NONE"      ],
+	[  "Cursor",                    "NONE",        "NONE",     "NONE"      ],
+	[  "CursorColumn",              "NONE",        "NONE",     "NONE"      ],
 
 ]
 
