Add quickfix highlighting

--- a/colors/aquaink.erb
+++ b/colors/aquaink.erb
@@ -171,6 +171,7 @@ highlights  =                 [
 	[  "WarningMsg",                UI_red,        UI_light2,  "NONE"      ],
 	[  "Cursor",                    "NONE",        "NONE",     "NONE"      ],
 	[  "CursorColumn",              "NONE",        "NONE",     "NONE"      ],
+	[  "QuickFixLine",              UI_dark3,      "NONE",     "bold"      ],
 
 ]
 
